deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cireleasechecklist
  namespace: devops
  labels:
    app: cireleasechecklist
    environment: dev
  annotations:
    description: "Nginx deployment with best practices"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cireleasechecklist
  template:
    metadata:
      labels:
        app: cireleasechecklist
        environment: dev
    spec:
      containers:
        - name: nginx
          image: nginx:1.25.3
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "64Mi"
              cpu: "100m"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 20
